--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap-reverse;
+  gap: 16px;
 }
 
 /* ========== LAYOUT END ========== */
