--- a/style.css
+++ b/style.css
@@ -90,4 +90,37 @@ body {
   border: 0.1px solid #e5e7eb22;
 }
 
+/* ===== Toolbar Component ===== */
+.toolbar {
+  min-width: 300px;
+  padding: 16px;
+  border: 1px solid #fff;
+  border-radius: 16px;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.toolbar-tools-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.toolbar-item {
+  border-bottom: 0.1px solid #e5e7eb22;
+  padding: 8px 0;
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
 /* ========== COMPONENTS END ========== */
