--- a/style.css
+++ b/style.css
@@ -111,16 +111,30 @@ body {
   justify-content: center;
 }
 
+.toolbar-item:nth-child(1) {
+  border-top: 0.1px solid #e5e7eb22;
+}
+
 .toolbar-item {
   border-bottom: 0.1px solid #e5e7eb22;
-  padding: 8px 0;
+  padding: 16px 0;
   width: 100%;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+
+.toolbar-item-title {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.toolbar-item-body {
+  display: flex;
+  gap: 16px;
 }
 
 /* ===== Button Component ===== */
