--- a/style.css
+++ b/style.css
@@ -23,11 +23,15 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 .header {
   padding: 16px;
   border-bottom: 0.1px solid #e5e7eb22;
+  width: 100%;
 
   display: flex;
   align-items: center;
@@ -36,6 +40,7 @@ body {
 
 .footer {
   padding: 8px;
+  width: 100%;
   border-top: 0.1px solid #e5e7eb22;
   display: flex;
   align-items: center;
@@ -92,7 +97,7 @@ body {
 
 /* ===== Toolbar Component ===== */
 .toolbar {
-  min-width: 300px;
+  max-width: 300px;
   padding: 16px;
   border: 1px solid #fff;
   border-radius: 16px;
