--- a/style.css
+++ b/style.css
@@ -49,13 +49,29 @@ body {
 
 .main {
   flex: 1;
-
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap-reverse;
   gap: 16px;
 }
+
+.leftbar,
+.rightbar {
+  flex: 1 1 300px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .middlebar {
+  flex: 1 1 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
 /* ========== LAYOUT END ========== */
 
